# sensei

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  dockerfile  flake.nix  mprocs.yaml  result 2  toolchain.toml
Mock/: Cargo.toml
Mock/src/: main.rs
Mock/src/common/: mod.rs  rpc_envelope.rs
Mock/src/registry/: registry.rs
Mock/src/system_node/: mod.rs  system_node.rs
common/: Cargo.toml
common/src/: adapter_mode.rs  lib.rs  radio_config.rs  rpc_envelope.rs
examples/: example_full.yaml
examples/default/: node.yaml  orchestrator.yaml  registry.yaml  visualiser.yaml
examples/demo/: esp32_node_listen.yaml
examples/experiments/: delay_exp.yaml  init_csv_exp.yaml  ping_exp.yaml
examples/minimal/: node.yaml  orchestrator.yaml
examples/preconfigured/: csv_node.yaml  esp32_node.yaml  mprocs.yaml  netlink_node.yaml  tcp_node.yaml
examples/test_setups/full_test/: mprocs.yaml  node_2.yaml  node_3.yaml  node_esp.yaml  orchestrator.yaml  registry.yaml  visualiser.yaml
examples/test_setups/registry_test/: mprocs.yaml  node_1.yaml  node_2.yaml  node_3.yaml  registry.yaml
examples/test_setups/visualizer_test/: mprocs.yaml  node.yaml
lib/: Cargo.toml
lib/devices/esp32/: cli_test_tool.rs  esp32.rs
lib/src/: adapter_mode.rs  csi_types.rs  errors.rs  iwl_test_tool.rs  lib.rs  radio_config.rs  rpc_envelope.rs  subscriber.rs  tcp_client.rs  test_utils.rs
lib/src/adapters/: mod.rs
lib/src/adapters/csv/: adapter.rs  mod.rs
lib/src/adapters/esp32/: adapter.rs  mod.rs
lib/src/adapters/iwl/: adapter.rs  header.rs  mod.rs  read.rs  test_utils.rs
lib/src/adapters/passive/: adapter.rs  mod.rs
lib/src/adapters/tcp/: adapter.rs  mod.rs
lib/src/controller/: mod.rs
lib/src/devices/: mod.rs
lib/src/experiments/: mod.rs
lib/src/handler/: device_handler.rs  mod.rs  source_task.rs
lib/src/network/: experiment_config.rs  mod.rs  rpc_message.rs
lib/src/network/tcp/: client.rs  mod.rs  server.rs
lib/src/raw_source_task/: task.rs
lib/src/sinks/: csv.rs  file.rs  mod.rs  tcp.rs
lib/src/sources/: csv.rs  esp32.rs  file_reader.rs  mod.rs  netlink.rs  raw_frame_converter.rs  tcp.rs
lib/src/sources/controllers/: csv_controller.rs  esp32_controller.rs  mod.rs  netlink_controller.rs  tcp_controller.rs
lib/src/tui/: example.rs  logs.rs  mod.rs
main/: Cargo.toml
main/src/: main.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
registry/: Cargo.toml
registry/src/: main.rs
resources/example_configs/host/: dummy_registry_node.yaml  esp_example.yaml  example_full.yaml  minimal.yaml
resources/example_configs/host/balls/: node_2.yaml
resources/example_configs/host/quick_setups/: csv_quick_setup.yaml  esp32_quick_setup.yaml  netlink_quick_setup.yaml  tcp_quick_setup.yaml
resources/example_configs/host/reg_test/: node_1.yaml  node_3.yaml  reg.yaml
resources/example_configs/orchestrator/: delays.yaml  experiment_config.yaml  get_host_statuses.yaml  ping_host.yaml
resources/example_configs/registry/: registry_config.yaml
resources/test_data/: generate_data.py
resources/test_data/csv/: csi_data.csv  csi_data_new_format.csv  csi_data_small.csv
resources/test_data/test_configs/: dummy_node.yaml  esp_example.yaml  minimal.yaml  netlink_example.yaml
resources/testing_configs/: dummy_node.yaml  dummy_registry_node.yaml  minimal.yaml
scripts/: check.sh  covereage.sh  crosscompile-arm.sh  csi_data.csv  generate_data.py  mprocs.yaml  test.sh
sensei/: Cargo.toml
sensei/src/: cli.rs  config.rs  errors.rs  main.rs  module.rs  services.rs
sensei/src/esp_tool/: README.md  mod.rs  spam_settings.rs  state.rs  tui.rs
sensei/src/orchestrator/: example_config.yaml  experiment.rs  experiment_config.yaml  mod.rs  state.rs  tui.rs
sensei/src/registry/: mod.rs
sensei/src/system_node/: dummy_node.yaml  example_config.yaml  example_full.yaml  mod.rs
sensei/src/visualiser/: mod.rs  state.rs  tui.rs
system_node/: Cargo.toml
system_node/src/: main.rs
