[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
serialport = "4.7.1"
byteorder = "1.5.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
crossbeam-channel = "0.5.15"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
serde_yaml = "0.9.34"
num-complex = { version = "0.4.6", features = ["serde"] }
schemars = "0.8.22"
log = { version = "0.4.27", features = ["std"] }
thiserror = "2.0.12"
chrono = "0.4.41"
futures = "0.3.31"
tempfile = "3.20.0"
ratatui = "0.29.0"
csv = "1.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.7"

[lints]
workspace = true

