[package]
name = "sensei"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
argh = "0.1.12"
log = { version = "0.4.27", features = ["std"] }
simplelog = "0.12.2"
ratatui = "0.29.0"
charming = "0.4.0"
chrono = "0.4.41"
crossterm = "0.29.0"
futures = "0.3.31"
serde = "1.0.219"
serde_yaml = "0.9.34"
rustfft = "6.3.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10.1"

[lints]
workspace = true
