[package]
name = "sensei"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
argh = "0.1.12"
log = { version = "0.4.27", features = ["std"] }
simplelog = "0.12.2"
ratatui = "0.29.0"
charming = "0.4.0"
chrono = "0.4.41"
crossterm = "0.29.0"
futures = "0.3.31"
serde = "1.0.219"
serde_yaml = "0.9.34"
rustfft = "6.3.0"

[lints]
workspace = true

[features]
default = ["sys_node", "orchestrator", "visualiser", "esp_tool", "iwl5300", "csv", "file_sink"]
sys_node = []
orchestrator = []
visualiser = []

# Optional: forward features to lib
esp_tool = ["lib/esp_tool"]
iwl5300 = ["lib/iwl5300", "sys_node"]
csv = ["lib/csv", "sys_node"]
file_sink = ["lib/file_sink", "sys_node"]