[package]
name = "sensei"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.44.2", default-features = false, features = ["net", "time", "macros", "rt-multi-thread", "io-std", "io-util", "process", "fs", "signal"] }
async-trait = "0.1.88"
argh = "0.1.12"
log = { version = "0.4.27", features = ["std"] }
simplelog = "0.12.2"
ratatui = "0.29.0"
charming = "0.4.0"
chrono = "0.4.41"
crossterm = "0.29.0"
futures = "0.3.31"
serde = "1.0.219"
serde_yaml = "0.9.34"
rustfft = "6.3.0"
serde_json = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.10.1"
bincode = "1.3"

[lints]
workspace = true

[features]
default = ["sys_node", "orchestrator", "visualiser", "esp_tool", "iwl5300", "csv", "file_sink", "registry"]
sys_node = []
orchestrator = []
visualiser = []
registry = []

# Optional: forward features to lib
esp_tool = ["lib/esp_tool"]
iwl5300 = ["lib/iwl5300", "sys_node"]
csv = ["lib/csv", "sys_node"]
file_sink = ["lib/file_sink", "sys_node"]
